--- a/WebApplication1/Stylesheets/Stiluri.css
+++ b/WebApplication1/Stylesheets/Stiluri.css
@@ -3,17 +3,28 @@
     margin: 0;
 }
 
-.MeniuStyle {
+.TopBarStyle {
     background-color: #00087f;
     width: 100%;
-    height: 8%;
     position: absolute;
-    border-radius: 0px 0px 25px 25px;
-    box-shadow: 0px 5px 18px 0px #000000;
     border-right: 2px solid #ffb300;
     border-left: 2px solid #ffb300;
-    border-bottom: 2px solid #ffb300;
     display: flex;
+}
+
+.MeniuStyle {
+    height: 8%;
+    border-radius: 0px 0px 25px 25px;
+    box-shadow: 0px 5px 18px 0px #000000;
+    border-bottom: 2px solid #ffb300;
+}
+
+.RunDetailBarStyle {
+    bottom: 0px;
+    border-top: 2px solid rgb(255, 179, 0);
+    border-radius: 25px 25px 0px 0px;
+    overflow: scroll;
+    height: 15%;
 }
 
 .BarStyle {
