--- a/WebApplication1/Stylesheets/Stiluri.css
+++ b/WebApplication1/Stylesheets/Stiluri.css
@@ -122,3 +122,9 @@ input[type="checkbox"] {
     cursor: pointer;
     padding-left: 20px;
 }
+
+.canvasStyle {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
