--- a/WebApplication1/Stylesheets/Stiluri.css
+++ b/WebApplication1/Stylesheets/Stiluri.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #000c3d;
+    background-color: #fff;
     margin: 0;
 }
 
@@ -124,7 +124,7 @@ input[type="checkbox"] {
 }
 
 .canvasStyle {
-    width: 100%;
     height: 100%;
     position: absolute;
+    left: 30%;
 }
