--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
 <footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.0/umd/react-dom.development.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.32.0.min.js" charset="utf-8"></script>
     <script>var webPath = "@(new UrlHelper(HttpContext.Current.Request.RequestContext).Content("~"))";</script>
     <script type="module" src="@Url.Content("~/Scripts/ReactComps.jsx")"></script>
 </footer>
