--- a/WebApplication1/Stylesheets/Stiluri.css
+++ b/WebApplication1/Stylesheets/Stiluri.css
@@ -7,6 +7,7 @@
 body {
     background-color: #fff;
     margin: 0;
+    overflow: hidden;
 }
 
 ul {
@@ -81,7 +82,7 @@ table {
 
 .BarStyle {
     background-color: var(--fundalPanel);
-    height: 77%;
+    height: 100%;
     width: 15%;
     padding-top: 4%;
     position: absolute;
